--- a/projects/ML 1-ml phishing detector/p1slides/s3.html
+++ b/projects/ML 1-ml phishing detector/p1slides/s3.html
@@ -181,10 +181,11 @@
                             <span>Areas of Interest</span>
                         </h3>
                         <ul class="list-disc ml-6 space-y-2">
+                            <li>Software Development Engineering</li>
                             <li>Artificial Intelligence & Machine Learning</li>
                             <li>MLOps & Model Deployment Automation</li>
                             <li>Cloud Architecture & DevOps</li>
-                            <li>Cybersecurity & Network Protection Systems</li>
+                            
                         </ul>
                     </div>
                 </div>
